# PgnStats

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  cross_compile.sh  functions.c  main.c  types.h  windows_compile.bat
src/: Makefile  functions.c  functions.h  individual.c  individual.h  main.c  statistics.c  statistics.h  types.h  util.c  util.h
